...
                                                    <constraint firstAttribute="height" constant="2" id="FcX-gS-CXd"/>
                                                </constraints>
                                            </view>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hBz-3c-7Al">
                                                <rect key="frame" x="16" y="458" width="288" height="30"/>
                                                <color key="backgroundColor" red="0.0" green="0.45513359695713262" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" label="showProfExpButton">
                                                    <bool key="isElement" value="YES"/>
                                                </accessibility>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="30" id="W2m-jH-Dt5"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
...
                            <constraint firstItem="7Tb-Kb-RsC" firstAttribute="trailing" secondItem="VKo-vk-iDq" secondAttribute="trailing" constant="8" id="RdS-Mq-iXI"/>
                            <constraint firstItem="7Tb-Kb-RsC" firstAttribute="bottom" secondItem="VKo-vk-iDq" secondAttribute="bottom" constant="8" id="n6I-QF-rmi"/>
                            <constraint firstItem="VKo-vk-iDq" firstAttribute="leading" secondItem="7Tb-Kb-RsC" secondAttribute="leading" constant="8" id="w48-Et-VtW"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="7Tb-Kb-RsC"/>
                    </view>
                    <navigationItem key="navigationItem" title="Professional Experience" id="nU6-Hd-QSQ">
                        <barButtonItem key="leftBarButtonItem" image="back" id="zkm-j6-rF0" customClass="AccesibilityBarButtonItem" customModule="CVChallenge" customModuleProvider="target">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="boolean" keyPath="accessibilityEnabled" value="YES"/>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabelText" value="profExpBackBarButton"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
                                <action selector="backEvent:" destination="lSu-rj-E7a" id="r2u-ie-jE2"/>
                            </connections>
                        </barButtonItem>
                        <userDefinedRuntimeAttributes>
...
                            <constraint firstItem="dR8-jw-h9e" firstAttribute="bottom" secondItem="Gld-18-Lz3" secondAttribute="bottom" constant="8" id="D3O-NI-Rav"/>
                            <constraint firstItem="dR8-jw-h9e" firstAttribute="trailing" secondItem="Gld-18-Lz3" secondAttribute="trailing" constant="8" id="tCc-Fh-laR"/>
                            <constraint firstItem="Gld-18-Lz3" firstAttribute="leading" secondItem="dR8-jw-h9e" secondAttribute="leading" constant="8" id="xa0-43-r2Q"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="dR8-jw-h9e"/>
                    </view>
                    <navigationItem key="navigationItem" title="Projects" id="5k9-09-DVl">
                        <barButtonItem key="leftBarButtonItem" image="back" id="JBV-Yg-tzH" customClass="AccesibilityBarButtonItem" customModule="CVChallenge" customModuleProvider="target">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="boolean" keyPath="accessibilityEnabled" value="YES"/>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabelText" value="projectBackBarButton"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
                                <action selector="backEvent:" destination="w18-Wm-RFr" id="2G8-9G-tZG"/>
                            </connections>
                        </barButtonItem>
                        <userDefinedRuntimeAttributes>
...
